<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_aboutUs"
        android:title="@string/about_us" />
    <item
        android:id="@+id/ContactUs"
        android:title="@string/contact_us"
        >
    </item>
    <item
        android:id="@+id/gallery_nav"
        android:title="@string/gallery">
    </item>
    <item
        android:id="@+id/SCANNER"
        android:title="@string/scanner"
        android:icon="@drawable/scanner_logo"
        >
    </item>
    <item
        android:id="@+id/LANGUAGE"
        android:title="@string/language"
        android:icon="@drawable/language_logo"
        >
    </item>
    <item
        android:id="@+id/BecomeMember"
        android:title="@string/become_a_member"
        >
    </item>
    <item
        android:id="@+id/Download"
        android:title="@string/download_id"
        >
    </item>

    <item
        android:id="@+id/Members"
        android:title="@string/members_list"
        >
    </item>
    <item
        android:id="@+id/upConstituency"
        android:title="@string/up_constituency"
        >
    </item>

    <item android:title="Upcoming">
        <menu>
            <item
                android:id="@+id/nav_ny"
                android:title="@string/upcoming_events" />

            <item
                android:id="@+id/nav_newsArt"
                android:title="@string/news_article" />

        </menu>
    </item>

</menu>